--- a/app/src/main/res/layout/activity_livedata_demo.xml
+++ b/app/src/main/res/layout/activity_livedata_demo.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.shvartsy.simpleviewmodel.simpleviewmodel.LiveDataDemoActivity">
+    tools:context="com.shvartsy.archcomponents.view.LiveDataDemoActivity">
 
     <TextView
         android:id="@+id/timer_value_text"
