--- a/app/src/main/res/layout/activity_viewmodel_demo.xml
+++ b/app/src/main/res/layout/activity_viewmodel_demo.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.shvartsy.simpleviewmodel.simpleviewmodel.ViewModelDemoActivity">
+    tools:context="com.shvartsy.archcomponents.view.ViewModelDemoActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
